# haut

./: .gitignore  .gitmodules  .travis.yml  README.md  esp-gen3.notes.md  flash_attiny85  run-ota.bash  verify_attiny85
App1/: .cproject  .ino.cpp  .project
busy_center/: platformio.ini
busy_center/src/: main.cpp  native_main.cpp
busy_center/test/: test_bb_puzzle.cpp
busy_logic/: load  platformio.ini
busy_logic/src/: bb_puzzle.h  main.cpp
busy_logic/test/: test_bb_puzzle.cpp  test_riddle.cpp
desk/: .cproject  .project  desk.ino
dev/: upgrade_test
dev/blink/: .project  (+2 more)
esp-ota/: Dockerfile  index.html  run.bash  update.php  update2.php
esp-rfidread/: platformio.ini
esp_gen1/: platformio.ini
esp_gen3p/: platformio.ini
esp_mqtt/: .cproject  .project  mqtt1.ino
esp_shutter/: platformio.ini
esp_stripctl/: platformio.ini
fadeTest/: .cproject  .project  GettingStarted.ino
hyperion/: README.md  colorCmd2.bash  hyperion.config.json
kitchenSensor/: .ino.cpp  .project  kitchenSensor.ino
libraries/: DHT-sensor-library  TinyWireS  optiboot-service  rweatherCrypto
maoam_dispenser/: platformio.ini
pwm_slave/: .cproject  Blink.ino  IRrecvDemo.ino
rf24/: .ino.cpp  .project
rf24m/: .ino.cpp
rf433ctl_pi/: a2.cpp  anal.cpp
rider/: platformio.ini
serialotad/: .cproject  .project  CMakeLists.txt  main.cpp  stk500.h
serialotad/src/: PtyChannel.h  SerialChannel.h  Stk500Emulator.h  common.h  main.cpp
sonoff_basic/: .project  bling.cpp  platformio.ini
t0/: .cproject  .ino.cpp  .project  Blink.ino
wattmeter/: .cproject  .ino.cpp  wattm.ino
(+180 files in other folders)
